README.md: Also add a trick to disable parallel GC