@@ -55,7 +55,11 @@ or specifically ``-Dorg.slf4j.simpleLogger.log.cz.brmlab.yodaqa=debug``.
 
 Sometimes, Java may find itself short on memory; don't try to run YodaQA
 on systems with less than 8GB RAM.  Anyhow, you may need to invoke it as
-``MAVEN_OPTS="-Xms2048m -Xmx4500m" mvn -q exec:java ...``.
+``MAVEN_OPTS="-Xms2048m -Xmx4500m" mvn -q exec:java ...``.  Another issue
+that can arise is that if you are running measurements in parallel, one
+of the java processes decides to spawn bazillion threads to perform
+garbage collection; to prevent that, include ``-XX:-UseParallelGC
+-XX:-UseConcMarkSweepGC`` in ``MAVEN_OPTS``.
 
 ## Data Sources
 
